--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,3 +12,13 @@ input{
     background-color: #fff;
 }
 
+button{
+    cursor: pointer;
+    width: 100%;
+    display: block;
+    background-color: #555;
+    border:0;
+    color: #fff;
+    border-radius: 5px;
+    padding: 7px 0;
+}
